# s_onnx-compiler

./: .gitignore  Cargo.toml  README.md  test.txt
src/: lib.rs  main.rs
src/codegen/: error.rs  generator.rs  mod.rs  tac.rs
src/error/: error.rs  mod.rs  position.rs
src/lexer/: error.rs  mod.rs  scanner.rs  token.rs
src/parser/: ast.rs  error.rs  mod.rs  recursive_descent.rs
src/semantic/: checker.rs  error.rs  mod.rs  symbol_table.rs
src/utils/: file.rs  mod.rs  print.rs
tests/: compiler_test.rs
